Fixed the sign up button in mobile view along with the nav bar, and corrected the images widths to eliminate the scroll bar, deleted the repeated omg block that was causing mobile issues with design look and scrollbar

--- a/css/index.css
+++ b/css/index.css
@@ -297,6 +297,7 @@ footer {
   width: 100%;
   max-width: 460px;
   margin: 0 20px;
+  border-radius: 10px;
 }
 .home .visit-planets {
   padding: 15px;
@@ -357,20 +358,4 @@ footer {
     padding: 25px;
     margin: 0 20px;
   }
-}
-.home .walk .walk-img {
-  width: 290px;
-  margin-left: 4%;
-}
-@media (max-width:500px) {
-  .home .walk .walk-img {
-    width: 100%;
-    max-width: 460px;
-    margin: 0 20px;
-  }
-}
-.home .walk .walk-img img {
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
 }
