--- a/less/home-page.less
+++ b/less/home-page.less
@@ -101,6 +101,7 @@
       width: 100%;
       max-width: 460px;
       margin: 0 20px;
+      border-radius: 10px;
     }
    
   }
@@ -168,24 +169,6 @@
             margin: 0 20px;
           }
         }
-    }
-
-    .walk-img {
-      width: 290px;
-      margin-left: 4%;
-
-      @media @phone {
-        width: 100%;
-        max-width: 460px;
-        // margin-left: 0;
-        margin: 0 20px;
-      }
-      
-      img {
-        width: 100%;
-        height: auto;
-        border-radius: 10px;
-      }
     }
   }
 }// home
